<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_01"
    android:orientation="vertical">



    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent"/>


        <ImageButton
            android:id="@+id/medicine_list_button"
            android:src="@drawable/icon_list"
            android:background="@drawable/rounded_10_button"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:contentDescription="@string/show_list_button" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/yellow_01"
            android:text="@string/homepage"/>

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <View
            android:layout_width="55dp"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <RelativeLayout
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/a_big_circle"
            android:src="@drawable/circle_large" />
        <ImageView
            android:contentDescription="@string/a_not_so_big_circle"
            android:src="@drawable/circle_small"
            android:layout_centerInParent="true"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/medicine" />
    </RelativeLayout>


    <LinearLayout
        android:gravity="start"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/today_day_of_week"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_20_card"
            android:textSize="26sp"
            android:paddingVertical="10dp"
            android:textAllCaps="true"
            android:textColor="@color/black_02"
            android:text="@string/example_day_of_week"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>




    <LinearLayout
        android:gravity="start"
        android:orientation="vertical"
        android:background="@drawable/scheduled_list_bg"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black_01"
            android:text="@string/today_scheduled"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>


</LinearLayout>